[fixmystreet.com] Increase affordance on map buttons on mobile when making a new report

--- a/web/cobrands/fixmystreet.com/base.scss
+++ b/web/cobrands/fixmystreet.com/base.scss
@@ -176,6 +176,30 @@ svg|g.site-logo__svg {
   border-bottom: none;
 }
 
+// Make mobile buttons look better 
+#problems_nearby {
+  @extend .btn;
+  border-left: 0;
+}
+
+#mob_ok {
+  @extend .btn-primary;
+}
+
+#problems_nearby,
+#mob_ok {
+  letter-spacing: 0.5px;
+  color: #000 !important;
+  border-radius: 0;
+  border-right: 0;
+  &:hover,
+  &:active,
+  &:focus {
+    color: #000 !important;
+  }
+}
+
+
 $mysoc-footer-background-color: #222;
 $mysoc-footer-text-color: #acacac;
 $mysoc-footer-site-name-text-color: #fff;
